[package]
name = "webrtc-rs"
version = "0.1.1"
authors = ["Zachary Vacura <zach@hackzzila.com>"]
edition = "2018"
repository = "https://github.com/Hackzzila/webrtc-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tokio = { version = "0.2", features = ["full"] }
