[package]
name = "webrtc-rs"
version = "0.1.1"
authors = ["Zachary Vacura <zach@hackzzila.com>"]
edition = "2018"
repository = "https://github.com/Hackzzila/webrtc-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libc = "0.2"
tokio = { version = "0.2", features = ["sync"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "0.2", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
  "RtcIceServer",
  "RtcConfiguration",
  "RtcBundlePolicy",
  "RtcIceTransportPolicy",
  "RtcPeerConnection",
  "RtcSessionDescription",
  "RtcSessionDescriptionInit",
  "RtcSdpType",
  "RtcSignalingState",
]
